--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                         </div><br>
                 
 
-                <form id="google-form">
+                <!-- <form id="google-form">
                     <div class="row">
                         <div class="col-6 col-12-medium">
                             <input type="text" id="email" placeholder="E-mail" />
@@ -471,7 +471,7 @@
                     </div><br>
 
                     <Center><input type="submit" value="𝘚𝘶𝘣𝘮𝘪𝘵" /></Center>
-                </form>
+                </form> -->
             </article>
 
              
@@ -489,5 +489,6 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
+
 
 </html>
