--- a/index.html
+++ b/index.html
@@ -440,6 +440,11 @@
                                 <h6 style="color:#ededed;"> Send  message to  miikohsu@gmail.com  </h6></a>
                             </center>
                         </div><br>
+						<div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;">
+                            <center><a href="https://www.instagram.com/rniko__/" style="color:#ededed; text-decoration:none;">
+                                <h6 style="color:#ededed;"> Instagram @rniko__  </h6></a>
+                            </center>
+                        </div><br>
                 
 
                 <!-- <form id="google-form">
@@ -492,3 +497,4 @@
 
 
 </html>
+
