--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                         </div> -->
                         <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;">
                             <center><a href="mailto:miikohsu@gmail.com" style="color:#ededed; text-decoration:none;">
-                                <h6 style="color:#ededed;"> Send  message to  miikohsu@gmail.com  </h6></a>
+                                <h6 style="color:#ededed;"> Mail to ✉️miikohsu@gmail.com  </h6></a>
                             </center>
                         </div><br>
 						<div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;">
@@ -497,4 +497,5 @@
 
 
 </html>
+
 
