--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                         </div><br>
 						<div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;">
                             <center><a href="https://www.instagram.com/rniko__/" style="color:#ededed; text-decoration:none;">
-                                <h6 style="color:#ededed;"> Instagram <div class="icon brands fa-instagram"></div>  @rniko__  </h6></a>
+                                <h6 style="color:#ededed;"> Instagram <div class="icon brands fa-instagram"> rniko__  </h6></div></a>
                             </center>
                         </div><br>
                 
@@ -497,6 +497,7 @@
 
 
 </html>
+
 
 
 
