--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@
                                 <h6 style="color:#ededed;" class="icon brands fa-instagram"> rniko__  </h6></a>
                             </center>
                         </div> -->
-                        <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;">
+                        <!-- <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;"> -->
                             <center><a href="mailto:miikohsu@gmail.com" style="color:#ededed; text-decoration:none;">
-                                <h6 style="color:#ededed;"> Mail <a class="icon light fa-envelope"></a> miikohsu@gmail.com  </h6></a>
+                                <h6 style="color:#ededed;" class="icon light fa-envelope"> miikohsu@gmail.com  </h6></a>
                             </center>
-                        </div><br>
+                       <br>
 						<div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;">
                             <center><a href="https://www.instagram.com/rniko__/" style="color:#ededed; text-decoration:none;">
                                 <h6 style="color:#ededed;"> Instagram <a class="icon brands fa-instagram"></a> rniko__  </h6></a>
@@ -497,6 +497,7 @@
 
 
 </html>
+
 
 
 
