--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                        <br>
 						<!-- <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;"> -->
                             <center><a href="https://www.instagram.com/rniko__/" style="color:#ededed; text-decoration:none;">
-                                <h6 style="color:#a68a81;"> Instagram <a class="icon brands fa-instagram"></a> rniko__  </h6></a>
+                                <h6 style="color:#a68a81;"><a class="icon brands fa-instagram"></a> rniko__  </h6></a>
                             </center>
                         <br>
                 
@@ -497,6 +497,7 @@
 
 
 </html>
+
 
 
 
