--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 
                         
-                        <h6 style="color:#665552; white-space: nowrap;">- 小盒子訊息容易遺漏，未收到回覆請 <a href="mailto:miikohsu@gmail.com" style="color:#3e95b3;"> E-mail</a> 來信 -</h6>
+                        <h6 style="color:#665552; white-space: nowrap;">- 小盒子訊息容易遺漏，未收到回覆請 E-mail 來信 -</h6>
             </article>
             <!-- Work -->
             <article id="work" class="panel">
@@ -497,6 +497,7 @@
 
 
 </html>
+
 
 
 
