--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 
                         
-                        <h6 style="color:#665552; white-space: nowrap;">- 小盒子訊息容易遺漏，未收到回覆請 E-mail 來信 -</h6>
+                        <h6 style="color:#665552; white-space: nowrap;">- 小盒子訊息容易遺漏，未收到回覆請直接來信 -</h6>
             </article>
             <!-- Work -->
             <article id="work" class="panel">
@@ -426,6 +426,11 @@
             </article>
             <!-- Contact-->
             <article id="contact" class="panel">
+				<style>
+					article.footer {
+				display: none !important;
+				}
+				</style>
                 <center>
                     <h1 id="fade-in-title2">Contact Me</h1>
                 </center><br>
@@ -497,6 +502,7 @@
 
 
 </html>
+
 
 
 
