--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                  </strong>
                                 ｜
                                 <strong>
-                                    <a href="#work"><h3 style="color: #3e95b3;display: inline;"><u>電子寫真</u></h3></a>
+                                    <a href="#work"><h3 style="color: #3e95b3;display: inline;"><u>電子寫真合作</u></h3></a>
                                 </strong>
                             
                             </center>
@@ -502,6 +502,7 @@
 
 
 </html>
+
 
 
 
