--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                  </strong>
                                 ·
                                  <strong>
-                                    <a class="gotoCosplay" href="#work"><h3 style="color: #3e95b3;display: inline;"><u>特殊主題拍攝</u></h3></a>
+                                    <a class="gotoCosplay" href="#work"><h3 style="color: #3e95b3;display: inline;"><u>特殊節日主題拍攝</u></h3></a>
                                  </strong>
                                 ｜
                                 <strong>
@@ -502,6 +502,7 @@
 
 
 </html>
+
 
 
 
