--- a/index.html
+++ b/index.html
@@ -426,11 +426,13 @@
             </article>
             <!-- Contact-->
             <article id="contact" class="panel">
+				
 				<style>
-					article.footer {
+					div.footer {
 				display: none !important;
 				}
 				</style>
+				
                 <center>
                     <h1 id="fade-in-title2">Contact Me</h1>
                 </center><br>
@@ -502,6 +504,7 @@
 
 
 </html>
+
 
 
 
