--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <article id="contact" class="panel">
 				
 				<style>
-					div.footer {
+					#footer {
 				display: none !important;
 				}
 				</style>
@@ -440,16 +440,16 @@
                                 <h6 style="color:#ededed;" class="icon brands fa-instagram"> rniko__  </h6></a>
                             </center>
                         </div> -->
-                        <!-- <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;"> -->
+                        <!-- <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;"> 
                             <center><a href="mailto:miikohsu@gmail.com" style="color:#ededed; text-decoration:none;">
                                 <h6 style="color:#a68a81;" class="icon light fa-envelope"> miikohsu@gmail.com  </h6></a>
                             </center>
                        <br>
-						<!-- <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;"> -->
-                            <center><a href="https://www.instagram.com/rniko__/" style="color:#ededed; text-decoration:none;">
-                                <h6 style="color:#a68a81;"><a class="icon brands fa-instagram"></a> rniko__  </h6></a>
+						 <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;"> -->
+                           <!--  <center><a href="https://www.instagram.com/rniko__/" style="color:#ededed; text-decoration:none;">
+                                <h6 style="color:#a68a81;"><a class="icon brands fa-instagram"></a> rniko__  </h6></a> -->
                             </center>
-                        <br>
+                        <br> 
                 
 
                 <!-- <form id="google-form">
@@ -502,6 +502,7 @@
 
 
 </html>
+
 
 
 
