--- a/index.html
+++ b/index.html
@@ -434,7 +434,11 @@
                 <center>
                     <h1 id="fade-in-title2">Contact Me</h1>
                 </center><br>
-
+					<div>
+					            <a href="https://www.instagram.com/rniko__/" target="_blank" class="icon brands fa-instagram" style="color: #916f66;"> 𝘳𝘯𝘪𝘬𝘰__ </a>
+					            <a style="color: #916f66;">｜</a>
+					            <a href="mailto:miikohsu@gmail.com" class="icon light fa-envelope" style="color:#916f66;"> 𝘮𝘪𝘪𝘬𝘰𝘩𝘴𝘶<i><strong>@</strong></i>𝘨𝘮𝘢𝘪𝘭.𝘤𝘰𝘮</a>
+					        </div>
                 <!-- <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;">
                             <center><a href="https://www.instagram.com/rniko__/"  style="color:#ededed; text-decoration:none;">00
                                 <h6 style="color:#ededed;" class="icon brands fa-instagram"> rniko__  </h6></a>
@@ -502,6 +506,7 @@
 
 
 </html>
+
 
 
 
