--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 				</style>
 				
                 <center>
-                    <h1 id="fade-in-title2">Contact Me</h1>
+                    <h1 id="fade-in-title2", opacity:0.88;>Contact Me</h1>
                 </center><br>
 					<div><center>
 					            <a href="https://www.instagram.com/rniko__/" target="_blank" class="icon brands fa-instagram" style="color: #916f66;"> 𝘳𝘯𝘪𝘬𝘰__ </a>
@@ -506,6 +506,7 @@
 
 
 </html>
+
 
 
 
