--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
                             </center>
                         </div><br>
 						<h3>
-
+		1. 拍攝地點以雙北地區為主，外縣市以及較偏遠區域車馬實報實銷。
+							2. 雲端調色小檔於拍攝日隔天起算五日內提供，兩小時拍攝內含五張精修。
+							3. 
+							4. 成品交付檔案格式為 .jpg 
 							
 						</h3>
                         <br>
@@ -508,6 +511,7 @@
 
 
 </html>
+
 
 
 
