--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <!-- <h1 id="fade-in-title2"><center><strong>𝙄𝙣𝙛𝙤𝙧𝙢𝙖𝙩𝙞𝙤𝙣</strong></h1><br></center>-->
                         <div class="phonesize" style="border: 15px #a68a81 solid; border-radius: 10px; background: #a68a81; opacity:0.88;">
                             <center>
-                                <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ededed;">服務項目</strong> ✣</h2>
+                                <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ffffff;">服務項目</strong> ✣</h2>
                             </center>
                         </div><br>
                         <div id="fade-in-content1">
@@ -511,6 +511,7 @@
 
 
 </html>
+
 
 
 
