--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                             </center>
                         </div><br>
 						<h3>
-		1. 拍攝地點以雙北地區為主，外縣市以及較偏遠區域車馬實報實銷。
-							2. 雲端調色小檔於拍攝日隔天起算五日內提供，兩小時拍攝內含五張精修。
-							3. 
-							4. 成品交付檔案格式為 .jpg 
+		1. 拍攝地點以雙北地區為主，外縣市以及較偏遠區域車馬實報實銷。<br>
+							2. 整體風格、服裝、道具可來信討論。<br>
+							3. 挑圖：調色小檔於拍攝日隔天起算五日內提供雲端連結。<br>
+							4. 成品：兩小時拍攝贈五張精修，於拍攝日隔日起算兩周內交付，檔案格式為.jpg（無提供RAW檔）。<br>
 							
 						</h3>
                         <br>
@@ -511,6 +511,7 @@
 
 
 </html>
+
 
 
 
