--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="phonesize" style="border: 15px #a68a81 solid; border-radius: 10px; background: #a68a81; opacity:0.88;">
                             <center>
-                                <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ededed;">拍攝須知</strong> ✣</h2>
+                                <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ffffff;">拍攝須知</strong> ✣</h2>
                             </center>
                         </div><br>
 						<h3>
@@ -125,7 +125,7 @@
                     </center><br>
                     <div class="phonesize" style="border: 15px #a68a81 solid; border-radius: 3.5px; background: #a68a81; opacity:0.75;">
                         <center>
-                            <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ededed;">寫真集 · 桌曆拍攝</strong> ✣</h2>
+                            <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ffffff;">寫真集 · 桌曆拍攝</strong> ✣</h2>
                         </center>
                     </div><br>
                     <a class="image centered"><img style="border-radius: 20px; opacity: 95%;" src="images/U2023.JPG" alt=""></a>
@@ -133,7 +133,7 @@
                     <br>
                     <div class="phonesize" style="border: 15px #a68a81 solid; border-radius: 3.5px; background: #a68a81; opacity:0.75;">
                         <center>
-                            <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ededed;">私房寫真 · 個人寫真</strong> ✣</h2>
+                            <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ffffff;">私房寫真 · 個人寫真</strong> ✣</h2>
                         </center>
                     </div>
                 
@@ -283,14 +283,14 @@
                 <div id="cosplay">
                     <div class="phonesize" style="border: 15px #a68a81 solid; border-radius: 3.5px; background: #a68a81; opacity:0.75;">
                         <center>
-                            <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ededed;">COSPLAY · 特殊主題寫真</strong> ✣</h2>
+                            <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ffffff;">COSPLAY · 特殊主題寫真</strong> ✣</h2>
                         </center>
                     </div><br>
                 </div>
 
                  <div class="phonesize" style="border: 7px #ededed solid !important; border-radius: 2px; background: #ededed; opacity:0.75;">
                         <center>
-                            <h3 id="fade-in-title2" style="font-family:Microsoft JhengHei;">· <strong style="color: #a68a81;">聖誕主題寫真</strong> ·</h3>
+                            <h3 id="fade-in-title2" style="font-family:Microsoft JhengHei;">· <strong style="color: #ffffff;">聖誕主題寫真</strong> ·</h3>
                         </center>
                     </div>
                
@@ -313,7 +313,7 @@
 
                         <div class="phonesize" style="border: 7px #ededed solid !important; border-radius: 2px; background: #ededed; opacity:0.75;">
                         <center>
-                            <h3 id="fade-in-title2" style="font-family:Microsoft JhengHei;">· <strong style="color: #a68a81;">新年主題寫真</strong> ·</h3>
+                            <h3 id="fade-in-title2" style="font-family:Microsoft JhengHei;">· <strong style="color: #ffffff;">新年主題寫真</strong> ·</h3>
                         </center>
                     </div>
 
@@ -334,7 +334,7 @@
                         </div><br><br>
                         <div class="phonesize" style="border: 7px #ededed solid !important; border-radius: 2px; background: #ededed; opacity:0.75;">
                         <center>
-                            <h3 id="fade-in-title2" style="font-family:Microsoft JhengHei;">· <strong style="color: #a68a81;">制服寫真</strong> ·</h3>
+                            <h3 id="fade-in-title2" style="font-family:Microsoft JhengHei;">· <strong style="color: #ffffff;">制服寫真</strong> ·</h3>
                         </center>
                     </div>
 
@@ -511,6 +511,7 @@
 
 
 </html>
+
 
 
 
