--- a/index.html
+++ b/index.html
@@ -93,10 +93,12 @@
                             </center>
                         </div><br>
 						<h3>
-		1. 拍攝地點以雙北地區為主，外縣市以及較偏遠區域車馬實報實銷。<br>
-							2. 整體風格、服裝、道具可來信討論。<br>
-							3. 挑圖：調色小檔於拍攝日隔天起算五日內提供雲端連結。<br>
-							4. 成品：兩小時拍攝贈五張精修，於拍攝日隔日起算兩周內交付，檔案格式為.jpg（無提供RAW檔）。<br>
+		- 拍攝地點 - <br>
+							以雙北地區為主，外縣市以及較偏遠區域車馬實報實銷。<br>
+							- 整體風格 -<br>
+							服裝、道具可來信討論。<br>
+							3. 挑圖<br>調色小檔於拍攝日隔天起算五日內提供雲端連結。<br>
+							4. 成品<br>兩小時拍攝贈五張精修，於拍攝日隔日起算兩周內交付，檔案格式為.jpg（無提供RAW檔）。<br>
 							
 						</h3>
                         <br>
@@ -511,6 +513,7 @@
 
 
 </html>
+
 
 
 
