--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
                                 <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ffffff;">合作須知</strong> ✣</h2>
                             </center>
                         </div><br>
-						<h3>- 地點 -<br></h3>
-							雙北地區為主<br>外縣市或較偏遠區域酌收車馬費（實報實銷）<br><br>
+						<h3>- 收費相關問題 -<br></h3>
+							雙北地區為主<br>外縣市、偏遠區域則車馬費實報實銷<br><br>
 
-						<h3>- 收費 -<br></h3>
 							費用不含攝影棚及妝髮<br>可提供場地以及造型老師們作品做參考<br><br>
 						
 						
@@ -520,6 +519,7 @@
 
 
 </html>
+
 
 
 
