--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 							2. 費用不含攝影棚及妝髮，如有需要可提供場地以及造型老師們作品做參考。<br>
 							3. 每小時拍攝贈 3 張精修，可額外加購。<br>
 						
-						4. 檔案格式為.jpg，無提供RAW檔。<br></h5>
-                5.小盒子訊息容易遺漏，未收到回覆請直接來信。 <br>
+						4. 檔案格式為.jpg，無提供RAW檔。<br>
+                5.小盒子訊息容易被阻擋，若未收到回覆請直接來信。 <br></h5>
                         </strong><br><br>
 
 
@@ -524,6 +524,7 @@
 
 
 </html>
+
 
 
 
