--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 						
 							
 							<h3>- 拍攝流程 -</h3>
-						確認日期並交付訂金後，可針對想要的風格討論服裝、選定地點等等。<br>
-						並於拍攝完成五日內提供調色小檔雲端連結挑圖<br>
+						確認日期並交付訂金後，可私訊討論服裝風格、選定地點等等。<br>
+						並於拍攝完成五日內提供調色小檔雲端連結，<br>
 
 			
 						挑圖後兩周內交付成片。<br><br><br>
@@ -524,6 +524,7 @@
 
 
 </html>
+
 
 
 
