--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 </center><br>
 					<div><center>
 					            <a href="https://www.instagram.com/rniko__/" target="_blank" class="icon brands fa-instagram" style="color: #916f66;"> 𝘳𝘯𝘪𝘬𝘰__    </a>
-					            <a style="color: #916f66;">        </a>
+					            <br>
 					            <a href="mailto:miikohsu@gmail.com" class="icon light fa-envelope" style="color:#916f66;"> 𝘮𝘪𝘪𝘬𝘰𝘩𝘴𝘶<i><strong>@</strong></i>𝘨𝘮𝘢𝘪𝘭.𝘤𝘰𝘮</a>
 					        </div>
                 <!-- <div class="phonesize" style="border: 10px #a68a81 solid; border-radius: 20px; background: #a68a81; opacity:0.75;">
@@ -511,7 +511,7 @@
         <!-- Footer -->
         <div id="footer">
             <a href="https://www.instagram.com/rniko__/" target="_blank" class="icon brands fa-instagram" style="color: #916f66;"> 𝘳𝘯𝘪𝘬𝘰__     </a>
-            <a style="color: #916f66;">        </a><br>
+            <a style="color: #916f66;">    ︳    </a><br>
             <a href="mailto:miikohsu@gmail.com" class="icon light fa-envelope" style="color:#916f66;"> 𝘮𝘪𝘪𝘬𝘰𝘩𝘴𝘶<i><strong>@</strong></i>𝘨𝘮𝘢𝘪𝘭.𝘤𝘰𝘮</a>
         </div>
     </div>
