--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <!-- Me -->
             <article id="home" class="panel intro">
                 <header>
+					<div id="footer">
+            <a href="https://www.instagram.com/rniko__/" target="_blank" class="icon brands fa-instagram" style="color: #916f66;"> 𝘳𝘯𝘪𝘬𝘰__     </a>
+            <a style="color: #916f66;">    ︳    </a><br>
+            <a href="mailto:miikohsu@gmail.com" class="icon light fa-envelope" style="color:#916f66;"> 𝘮𝘪𝘪𝘬𝘰𝘩𝘴𝘶<i><strong>@</strong></i>𝘨𝘮𝘢𝘪𝘭.𝘤𝘰𝘮</a>
+        </div>
                     <a href="https://www.instagram.com/rniko__/" style="color:#665552;text-decoration:none;">
                         <h1 id="fade-in-title1">𝙈𝙞𝙠𝙤 𝙋𝙝𝙤𝙩𝙤𝙜𝙧𝙖𝙥𝙝𝙮</h1>
                     </a>
@@ -524,6 +529,7 @@
 
 
 </html>
+
 
 
 
