--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="phonesize" style="border: 15px #a68a81 solid; border-radius: 10px; background: #a68a81; opacity:0.88;">
                             <center>
-                                <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ffffff;">合作須知</strong> ✣</h2>
+                                <h2 id="fade-in-title2" style="font-family:Microsoft JhengHei;">✣ <strong style="color: #ffffff;">拍攝流程</strong> ✣</h2>
                             </center>
                         </div><br>
 						
@@ -521,6 +521,7 @@
 
 
 </html>
+
 
 
 
