--- a/index.html
+++ b/index.html
@@ -106,10 +106,8 @@
 						<h3>- 注意事項 -</h3>
 							<h5>1. 拍攝地點以雙北地區為主，外縣市及較偏遠區域車馬費實報實銷。<br>
 							2. 費用不含攝影棚及妝髮造型，如有需要可提供場地以及老師們作品作參考。<br>
-							3. 每小時拍攝贈 3 張精修（可額外加價選購）。<br>
-						
-						4. 檔案交付格式為 .jpg，並提供兩次修改機會。<br>
-                5. 小盒子訊息容易被阻擋，若未收到回覆請直接來信。 <br></h5>
+							3. 每小時拍攝贈 3 張精修（可額外加價購），交付格式為 .jpg，並提供兩次修改機會。<br>
+                4. 小盒子訊息容易被阻擋，若未收到回覆請直接來信。 <br></h5>
                         </strong>
 
 
@@ -523,6 +521,7 @@
 
 
 </html>
+
 
 
 
